kubernetes/apps/selfhosted/opencloud/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: opencloud
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: opencloud
      app.kubernetes.io/instance: opencloud
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-external
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
